Added CLI docs command.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "husky": "^9.1.2",
         "jsdom": "^24.1.1",
         "lint-staged": "^15.2.7",
+        "marked": "^14.1.2",
         "ts-node": "^10.9.2",
         "typescript": "~5.5.4",
         "webpack": "^5.94.0",
@@ -43,11 +44,13 @@
     "scripts": {
         "build": "npm run webpack && npm run build:prepare && npm run build:copy && npm run build:pack && npm run build:cleanup",
         "build:cleanup": "rm -rf build/package/",
-        "build:copy": "cp -R bin code/* demos docs LICENSE.md README.md build/package/ && cp package-build.json build/package/package.json",
+        "build:copy": "cp -R bin code/* demos LICENSE.md README.md build/package/ && cp -R docs/connectors/ build/package/docs/ && cp package-build.json build/package/package.json",
         "build:pack": "npm pack build/package/ --pack-destination build/",
         "build:prepare": "rm -rf build/ ; mkdir -p build/package/",
         "demos": "npm run webpack && npm run demos:server",
         "demos:server": "(sleep 1 ; open http://localhost:8080) & node bin/connectors-morningstar demos",
+        "docs": "npm run webpack && npm run docs:server",
+        "docs:server": "(sleep 1 ; open http://localhost:8000) & node bin/connectors-morningstar docs",
         "dryrun": "ts-node tools/dist --dryrun",
         "husky:pre-commit": "npx lint-staged && npm run webpack",
         "prepare": "rm -rf '.husky/_' ; husky",
