--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,5 +63,5 @@ jobs:
       - name: Build webpack bundles
         run: npm run webpack
 
-      - name: Run unit-tests
-        run: npm run test:units
+      - name: Run tests
+        run: npm run test:tests
