Simplified unit-tests. (#36)
* Tools: Renamed unit-tests to tests.
* Tools: Moved test runtime to tools/tests.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,5 +63,5 @@ jobs:
       - name: Build webpack bundles
         run: npm run webpack
 
-      - name: Run unit-tests
-        run: npx ts-node test/unit-tests/runtime
+      - name: Run tests
+        run: npm run test:tests
