--- a/.eslintrc
+++ b/.eslintrc
@@ -73,6 +73,7 @@
                 "no-nested-ternary": 0,
                 "no-unmodified-loop-condition": 0,
                 "no-unused-vars": 1,
+                "no-useless-escape": 0,
                 "object-curly-spacing": [2, "always"],
                 "operator-linebreak": [2, "after"],
                 "quotes": [2, "single"],
