--- a/package.json
+++ b/package.json
@@ -42,11 +42,16 @@
         "highcharts": ">=11.4.0"
     },
     "scripts": {
+        "api": "npm run webpack && npm run api:server",
+        "api:server": "(sleep 1 ; open http://localhost:8005) & node bin/connectors-morningstar api",
         "build": "npm run webpack && npm run build:prepare && npm run build:copy && npm run build:pack && npm run build:cleanup",
         "build:cleanup": "rm -rf build/package/",
-        "build:copy": "cp -R bin code/* demos LICENSE.md README.md build/package/ && cp -R docs/connectors/ build/package/docs/ && cp package-build.json build/package/package.json",
+        "build:copy": "npm run copy:code && npm run copy:docs && npm run copy:json",
         "build:pack": "npm pack build/package/ --pack-destination build/",
         "build:prepare": "rm -rf build/ ; mkdir -p build/package/",
+        "copy:code": "cp -R bin code/* demos LICENSE.md README.md build/package/",
+        "copy:docs": "cp -R docs/connectors/ build/package/docs/",
+        "copy:json": "cp package-build.json build/package/package.json",
         "demos": "npm run webpack && npm run demos:server",
         "demos:server": "(sleep 1 ; open http://localhost:8080) & node bin/connectors-morningstar demos",
         "docs": "npm run webpack && npm run docs:server",
@@ -55,8 +60,8 @@
         "husky:pre-commit": "npx lint-staged && npm run webpack",
         "prepare": "rm -rf '.husky/_' ; husky",
         "scripts": "npm run scripts:bin && npm run scripts:code",
-        "scripts:bin": "rm -rf bin/ ; tsc -p src/CLI/ ; chmod +x bin/*.js",
-        "scripts:code": "rm -rf code/ ; tsc -p src/",
+        "scripts:bin": "rm -rf bin/ && tsc -p src/CLI/ && chmod +x bin/*.js && cp -R src/CLI/Static bin/ && ts-node tools/api",
+        "scripts:code": "rm -rf code/ && tsc -p src/",
         "reset": "rm -rf bin/ build/ code/ node_modules/ ; npm i",
         "test": "npm run webpack && npm run test:eslint && npm run test:unit-tests",
         "test:eslint": "eslint .",
@@ -64,7 +69,7 @@
         "test:unit-tests": "ts-node test/unit-tests/runtime",
         "watch": "tsc -p src/ -w",
         "webpack": "npm run scripts && webpack && npm run webpack:dts",
-        "webpack:dts": "npm run webpack:dts:cm && npm run webpack:dts:dbm && npm run webpack:dts:dgm && npm run webpack:dts:hcm",
+        "webpack:dts": "npm run webpack:dts:cm",
         "webpack:dts:cm": "cp src/webpack.d.ts code/connectors-morningstar.d.ts && cp src/webpack.d.ts code/connectors-morningstar.src.d.ts",
         "webpack:dts:dbm": "cp src/webpack.d.ts code/dashboards-morningstar.d.ts && cp src/webpack.d.ts code/dashboards-morningstar.src.d.ts",
         "webpack:dts:dgm": "cp src/webpack.d.ts code/datagrid-morningstar.d.ts && cp src/webpack.d.ts code/datagrid-morningstar.src.d.ts",
