--- a/tsconfig.json
+++ b/tsconfig.json
@@ -116,6 +116,7 @@
     // these options are overrides used only by ts-node
     // same as the --compilerOptions flag and the TS_NODE_COMPILER_OPTIONS environment variable
     "compilerOptions": {
+      "allowJs": true,
       "module": "CommonJS"
     }
   }
