--- a/tsconfig.json
+++ b/tsconfig.json
@@ -117,6 +117,7 @@
     // same as the --compilerOptions flag and the TS_NODE_COMPILER_OPTIONS environment variable
     "compilerOptions": {
       "allowJs": true,
+      "resolveJsonModule": true,
       "module": "CommonJS"
     }
   }
