--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "devDependencies": {
         "@aws-sdk/client-s3": "^3.592.0",
         "@aws-sdk/credential-providers": "^3.592.0",
-        "@typescript-eslint/eslint-plugin": "^7.17.0",
         "@types/jsdom": "^21.1.7",
         "@types/node": "^20.0.0",
+        "@typescript-eslint/eslint-plugin": "^7.17.0",
         "eslint": "^8.56.0",
         "eslint-plugin-brackets": "^0.1.3",
         "eslint-plugin-jsdoc": "^48.8.3",
@@ -38,7 +38,8 @@
         ]
     },
     "peerDependencies": {
-        "@highcharts/dashboards": "^3.3.0",
+        "@highcharts/dashboards": "github:highcharts/dashboards-dist#v4.0.0-rc.1",
+        "@highcharts/grid-pro": "github:highcharts/grid-pro-dist#v2.0.0-rc.1",
         "highcharts": "^12.2.0"
     },
     "scripts": {
