Adjust demos, set correct import paths, bump dash & grid.

--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
         ]
     },
     "peerDependencies": {
-        "@highcharts/dashboards": "github:highcharts/dashboards-dist#v4.0.0-rc.1",
-        "@highcharts/grid-pro": "github:highcharts/grid-pro-dist#v2.0.0-rc.1",
-        "highcharts": "^12.2.0"
+        "@highcharts/dashboards": "^4.0.0",
+        "@highcharts/grid-pro": "^2.0.0",
+        "highcharts": "^12.4.0"
     },
     "scripts": {
         "api": "npm run webpack && npm run api:server",
