--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "devDependencies": {
         "@aws-sdk/client-s3": "^3.592.0",
         "@aws-sdk/credential-providers": "^3.592.0",
-        "@typescript-eslint/eslint-plugin": "^7.17.0",
         "@types/jsdom": "^21.1.7",
         "@types/node": "^20.0.0",
+        "@typescript-eslint/eslint-plugin": "^7.17.0",
         "eslint": "^8.56.0",
         "eslint-plugin-brackets": "^0.1.3",
         "eslint-plugin-jsdoc": "^48.8.3",
@@ -38,8 +38,9 @@
         ]
     },
     "peerDependencies": {
-        "@highcharts/dashboards": "^3.3.0",
-        "highcharts": "^12.2.0"
+        "@highcharts/dashboards": "^4.0.0",
+        "@highcharts/grid-pro": "^2.0.0",
+        "highcharts": "^12.4.0"
     },
     "scripts": {
         "api": "npm run webpack && npm run api:server",
